--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <div ng-view></div>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-route.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="javascripts/controllers/MainCtrl.js"></script>
     <script src="javascripts/services/Users.js"></script>
     <script src="javascripts/appRoutes.js"></script>
