--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
-<body ng-app="demoApp" ng-controller="MainController">
+<body ng-app="demoApp">
     <h1>Welcome to Angular!</h1>
     <div ng-view></div>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
